eks-cluster/fargate-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jujy-log
#  namespace: jujy
  labels:
    env: fargate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jujy
  template:
    metadata:
      labels:
        app: jujy
    spec:
      containers:
      - name: jujy
        image: IMAGE_NAME_ENV
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
