eks-cluster/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jujy-ingress
#  namespace: jujy
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jujy-service
                port:
                  name: http
